--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
 <script>
 let sub = "memes";
 let sort = "hot";
-let res = fetch('https://www.reddit.com/r/'+sub+'/'+sort+'.json?limit=100');
-res = res.data.children;
-let image;
+fetch('https://www.reddit.com/r/'+sub+'/'+sort+'.json?limit=100', function(res){
+    res = res.data.children;
+    let image;
 
-while(!image){
-    image = post.url.includes('/r/')?null:post.url;
-}
-let post = res[Math.floor(Math.random()*res.length)].data;
-let url = "https://www.reddit.com"+post.permalink;
-let title = post.title;
-let poster = "u/"+post.author;
+    while(!image){
+        image = post.url.includes('/r/')?null:post.url;
+    }
+    let post = res[Math.floor(Math.random()*res.length)].data;
+    let url = "https://www.reddit.com"+post.permalink;
+    let title = post.title;
+    let poster = "u/"+post.author;
 
-let created = post.created*1000;
-let upvotes = post.ups;
+    let created = post.created*1000;
+    let upvotes = post.ups;
 
-$('#page').append(`<a href="${url}">${title}</a> by ${poster} at ${new Date(created).getTime()}<br><br><img src=image><br><br>${upvotes} upvotes.`)
-
+    $('#page').append(`<a href="${url}">${title}</a> by ${poster} at ${new Date(created).getTime()}<br><br><img src=image><br><br>${upvotes} upvotes.`)
+});
 </script>
 <div id="page">
 This will be my computing project.  For now it will just get random memes from Reddit.  Enjoy.<br><br><br>
