--- a/about/index.html
+++ b/about/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="utf-8">
   <title>Home</title>
-  <script src="js/vendor/jquery-3.4.1.min.js"></script>
-  <script src="js/init_page.js"></script>
+  <script src="../js/vendor/jquery-3.4.1.min.js"></script>
+  <script src="../js/init_page.js"></script>
 
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="../css/main.css">
 </head>
 
 <body class="background">
@@ -17,13 +17,13 @@
 
 <!--  <div class="header">-->
 <!--    <h3>Welcome to [NAME OF SITE]</h3>-->
-<!--    <div id="login-icon" onclick="window.location.href='./login/'"></div>-->
+<!--    <div id="login-icon" onclick="window.location.href='../login/'"></div>-->
 <!--  </div>-->
 
   <div class="btn-container">
-    <div class="btn-1" onclick="window.location.href='./'"><br>Home</div>
-    <div class="btn-1" onclick="window.location.href='./about/'"><br>About</div>
-    <div class="btn-1" onclick="window.location.href='./contact/'"><br>Contact</div>
+    <div class="btn-1" onclick="window.location.href='../'"><br>Home</div>
+    <div class="btn-1" onclick="window.location.href='../about/'"><br>About</div>
+    <div class="btn-1" onclick="window.location.href='../contact/'"><br>Contact</div>
   </div>
 
   <div id="container-1-top">
@@ -32,13 +32,7 @@
   </div>
   <div id="container-1">
     <div class="spacer"></div>
-    Have you ever had a huge list of tasks you need to do but have no idea where to start?<br>
-    Are you getting stressed out by by all the homework you need to do?<br>
-    Do you forget things easily and need a single place to keep track of it all?<br>
-    <br>
-    <h3>Well worry no more!</h3>
-    with [NAME OF SITE] you can keep track of everything in a single place and easily plan how
-    you will tackle big problems in small simple steps.
+    [Name of site] is a website that aims to help you organise your tasks.  We offer a simple solution to storing and managing tasks that must be completed.
   </div>
   <script>
     $(window).resize(res);
