--- a/terms/index.html
+++ b/terms/index.html
@@ -32,7 +32,19 @@
   </div>
   <div id="container-1">
     <div class="spacer"></div>
-    [Name of site] is a website that aims to help you organise your tasks.  We offer a simple solution to storing and managing tasks that must be completed.
+    <h1>Terms of Service</h1>
+    <h6>Last updated: 2nd Jan 2020</h6>
+    <br>
+    Please read these Terms of Service ("Terms") carefully before using any services ("Apps", "Service", "Site") provided by [Name Of Site] ("Us", "We", "The Company"). These terms include our privacy policy which can be found at //TODO;<br>
+    <br>
+    By using our service, you agree that (1) if you are the age of majority, you fully understand and will adhere to the terms outlined on this page.
+    (2) If you are under the age of majority, then your legal guardian fully understands and has accepted these terms on your behalf,
+    and (3) you are at least 13 years of age. If you should choose not to accept these terms, you may not use our services.<br>
+    <br>
+    We reserve the rights to modify or revise these terms, as well as the privacy policy, and you agree by your continued use of the service to be bound to these changes
+    fourteen (14) days after the date of modification. If you should choose to not agree with our updated terms, you shall cease use of our services within these fourteen (14) days.<br>
+    <br>
+
   </div>
   <script>
     $(window).resize(res);
